--- a/packages/mobile-patients/android/app/src/main/res/values/styles.xml
+++ b/packages/mobile-patients/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:forceDarkAllowed">false</item>
         @style/AppEditTextStyle
     </style>
 
